--- a/PhotoFolio/about.html
+++ b/PhotoFolio/about.html
@@ -53,10 +53,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html" class="active">About</a></li>
-          <li class="dropdown"><a href="#"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li><a href="about.html" class="active">Sobre</a></li>
+          <li class="dropdown"><a href="#"><span>Galeria</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="gallery-movimentos-sociais.html">Movimentos Socias</a></li>
+              <li><a href="gallery-movimentos-sociais.html">Protestos</a></li>
               <li><a href="gallery-alimentos.html">Alimentos</a></li>
               <li><a href="gallery-pessoas.html">Pessoas</a></li>
               <li><a href="gallery-exposicao.html">Exposicoes</a></li>
@@ -84,27 +84,15 @@
   <main id="main" data-aos="fade" data-aos-delay="1500">
 
     <!-- ======= End Page Header ======= -->
+
     <div class="page-header d-flex align-items-center">
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>About</h2>
-            <p>Katiany Echevarria Pinto (21 de outubro
-              de 2003, São Luiz Gonzaga, Rio Grande
-              do Sul). Acadêmica de Artes Visuais-
-              Bacharelado pela Universidade Federal
-              de Santa Maria (UFSM); Artista Visual e
-              Fotógrafa, militante política de movimento
-              social Levante Popular da Juventude, um
-              dos maiores movimentos sociais da
-              américa latina,ela atua em Santa Maria no
-              RS desde o começo de 2022. Desenvolve
-              trabalhos em Poeticas visuais e pesquisa
-              em arte e tecnologia, com interesse em
-              fotografia documental e suas variantes,
-              buscando documentar momentos a partir de suas lentes</p>
+            <h2>Sobre</h2>
+            <h1>Katiany Echevarria Pinto </h1>
 
-            <a class="cta-btn" href="contact.html">Available for hire</a>
+            <a class="cta-btn" href="contact.html">Contrate</a>
 
           </div>
         </div>
@@ -122,8 +110,20 @@
           <div class="col-lg-5 content">
             <h2>Fotografa</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Katiany Echevarria Pinto (21 de outubro
+              de 2003, São Luiz Gonzaga, Rio Grande
+              do Sul). Acadêmica de Artes Visuais-
+              Bacharelado pela Universidade Federal
+              de Santa Maria (UFSM); Artista Visual e
+              Fotógrafa, militante política de movimento
+              social Levante Popular da Juventude, um
+              dos maiores movimentos sociais da
+              américa latina,ela atua em Santa Maria no
+              RS desde o começo de 2022. Desenvolve
+              trabalhos em Poeticas visuais e pesquisa
+              em arte e tecnologia, com interesse em
+              fotografia documental e suas variantes,
+              buscando documentar momentos a partir de suas lentes
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -143,14 +143,7 @@
                 </ul>
               </div>
             </div>
-            <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
-            <p class="m-0">
-              Recusandae est praesentium consequatur eos voluptatem. Vitae dolores aliquam itaque odio nihil. Neque ut neque ut quae voluptas. Maxime corporis aut ut ipsum consequatur. Repudiandae sunt sequi minus qui et. Doloribus molestiae officiis.
-              Soluta eligendi fugiat omnis enim. Numquam alias sint possimus eveniet ad. Ratione in earum eum magni totam.
-            </p>
+            
           </div>
         </div>
 
