--- a/PhotoFolio/gallery-exposicao.html
+++ b/PhotoFolio/gallery-exposicao.html
@@ -53,10 +53,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="#"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li><a href="about.html">Sobre</a></li>
+          <li class="dropdown"><a href="#"><span>Galeria</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-            <li><a href="gallery-movimentos-sociais.html" >Movimentos Sociais</a></li>
+            <li><a href="gallery-movimentos-sociais.html" >Protestos</a></li>
               <li><a href="gallery-alimentos.html">Alimentos</a></li>
               <li><a href="gallery-pessoas.html">Pessoas</a></li>
               <li><a href="gallery-exposicao.html"class="active">Exposicoes</a></li>
@@ -90,7 +90,7 @@
             <h2>Exposicoes</h2>
             <p>Capturas de exposicoes</p>
 
-            <a class="cta-btn" href="contact.html">Available for hire</a>
+            <a class="cta-btn" href="contact.html">Contrate</a>
 
           </div>
         </div>
@@ -98,55 +98,50 @@
     </div><!-- End Page Header -->
 
     <!-- ======= Gallery Section ======= -->
-    <section id="gallery-item" class="gallery-item">
+    <section id="gallery" class="gallery">
       <div class="container-fluid">
 
         <div class="row gy-4 justify-content-center">
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <div class="col-xl-3 col-lg-4 col-md-5">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/exposicao-1.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/exposicao-1.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/gallery/exposicao-1.jpg" title="RECORTES DE TEMPO, do Laboratório de Pesquisa em Artes, Tempo e Espaço" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <div class="col-xl-3 col-lg-4 col-md-5">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/exposicao-2.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/exposicao-2.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/gallery/exposicao-2.jpg" title="RECORTES DE TEMPO, do Laboratório de Pesquisa em Artes, Tempo e Espaço" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <div class="col-xl-3 col-lg-4 col-md-5">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/exposicao-3.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/exposicao-3.jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/gallery/exposicao-3.jpg" title="RECORTES DE TEMPO, do Laboratório de Pesquisa em Artes, Tempo e Espaço" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <div class="col-xl-3 col-lg-4 col-md-5">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/exposicao-4.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/exposicao-4.jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/gallery/exposicao-4.jpg" title="RECORTES DE TEMPO, do Laboratório de Pesquisa em Artes, Tempo e Espaço" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
           </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
+          <div class="col-xl-3 col-lg-4 col-md-5">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/exposicao-5.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/exposicao-5.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
-                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <a href="assets/img/gallery/exposicao-5.jpg" title="RECORTES DE TEMPO, do Laboratório de Pesquisa em Artes, Tempo e Espaço" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
               </div>
             </div>
-         
+          </div><!-- End Gallery Item -->
         </div>
 
       </div>
