--- a/PhotoFolio/gallery.html
+++ b/PhotoFolio/gallery.html
@@ -53,10 +53,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li class="dropdown"><a href="#" class="active"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+          <li><a href="about.html">Sobre</a></li>
+          <li class="dropdown"><a href="#" class="active"><span>Galeria</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="gallery-movimentos-sociais.html">Movimentos Socias</a></li>
+              <li><a href="gallery-movimentos-sociais.html">Protestos</a></li>
               <li><a href="gallery-alimentos.html">Alimentos</a></li>
               <li><a href="gallery-pessoas.html">Pessoas</a></li>
               <li><a href="gallery-exposicao.html">Exposicoes</a></li>
@@ -87,10 +87,10 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>Movimentos Sociais</h2>
+            <h2>Protestos</h2>
             <p>Militante do Levante Popular da Juventude</p>
 
-            <a class="cta-btn" href="contact.html">Available for hire</a>
+            <a class="cta-btn" href="contact.html">Contrate</a>
 
           </div>
         </div>
